Documents new features and readme
